# huawei-interview-tasks

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
data/: text1_input.txt  text2_input.txt  text3_input.txt
include/: bigint.h  dlx.h  greatest_number.h  linked_matrix.h  map_solver.h
src/: bigint.cpp  dlx.cpp  greatest_number.cpp  linked_matrix.cpp  map_solver.cpp  text1.cpp  text2.cpp  text3.cpp
test/: test_bigint.cpp  test_greatest_number.cpp  test_map_solver.cpp
